# Template-App-FastAPI

./: .env.example  README.md  main.py  pyproject.toml  server.py
app/api/: auth.py  task.py  user.py
app/core/: config.py  database.py
app/models/: task.py  user.py
app/schemas/: task_schema.py  user_schema.py
app/services/: mail_service.py  task_service.py  user_service.py
app/utils/: security.py
